setup a dynamic domain in nginx configuration to facilitate testing in dev

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,10 +16,10 @@ http {
     server {
         include /etc/nginx/snippets/ssl-common.conf;
 
-        server_name nickhenley.dev www.nickhenley.dev;
+        server_name ${DOMAIN} www.${DOMAIN};
 
         location = / {
-            return 301 https://www.nickhenley.dev/index.html;
+            return 301 https://www.${DOMAIN}/index.html;
         }
 
         location / {
@@ -42,7 +42,7 @@ http {
     server {
         include /etc/nginx/snippets/ssl-common.conf;
         
-        server_name auth.nickhenley.dev;
+        server_name auth.${DOMAIN};
 
         location /google/login {
             proxy_pass http://auth-backend;
