added missing step to extract sha tag

--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -68,3 +68,16 @@ runs:
         subject-name: ${{ inputs.registry }}/${{ inputs.image-name }}
         subject-digest: ${{ steps.push.outputs.digest }}
         push-to-registry: true
+
+    - name: Extract SHA tag
+      id: extract-sha
+      shell: bash
+      run: |
+        echo "=== DEBUG: All tags ==="
+        echo "${{ steps.meta.outputs.tags }}"
+        echo "======================="
+        SHA_TAG=$(echo "${{ steps.meta.outputs.tags }}" | grep -E "sha-[a-f0-9]{7}" | head -1 | sed 's/.*://')
+        echo "sha-tag=$SHA_TAG" >> $GITHUB_OUTPUT
+        echo "Extracted SHA tag: $SHA_TAG"
+        echo "Current commit: ${{ github.sha }}"
+        echo "Current branch: ${{ github.ref_name }}"
