--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -40,7 +40,7 @@ runs:
           
           kubectl patch deployment ${{ inputs.deployment-name }} \
             -n ${{ inputs.namespace }} \
-            -p '{"spec":{"template":{"spec":{"containers":[{"name":"nginx","image":"ghcr.io/nh-homelab/reverse-proxy:${{ inputs.image-tag }}"}]}}}}' \
+            -p '{"spec":{"template":{"spec":{"containers":[{"name":"nginx-container","image":"ghcr.io/nh-homelab/reverse-proxy:${{ inputs.image-tag }}"}]}}}}' \
             --dry-run=client -o yaml | kubectl apply -f -
         else
           echo "Skipping image update: tag is empty or 'latest'"
