--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,7 @@ jobs:
     outputs:
       image-digest: ${{ steps.build.outputs.image-digest }}
       image-tags: ${{ steps.build.outputs.image-tags }}
+      sha-tag: ${{ steps.build.outputs.sha-tag }}
     permissions:
       contents: read
       packages: write
@@ -66,7 +67,8 @@ jobs:
               "PROXMOX_HOST": "${{ secrets.PROXMOX_HOST }}",
               "PROXMOX_PORT": "${{ secrets.PROXMOX_PORT }}",
               "AUTH_SERVICE_HOST": "${{ secrets.AUTH_SERVICE_HOST }}",
-              "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}"
+              "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}",
+              "DOMAIN": "${{ secrets.DEV_DOMAIN }}"
             }
 
       - name: Deploy to Dev
@@ -109,7 +111,8 @@ jobs:
               "PROXMOX_HOST": "${{ secrets.PROXMOX_HOST }}",
               "PROXMOX_PORT": "${{ secrets.PROXMOX_PORT }}",
               "AUTH_SERVICE_HOST": "${{ secrets.AUTH_SERVICE_HOST }}",
-              "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}"
+              "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}",
+              "DOMAIN": "${{ secrets.PROD_DOMAIN }}"
             }
 
       - name: Deploy to Prod
