--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -68,7 +68,9 @@ jobs:
               "PROXMOX_PORT": "${{ secrets.PROXMOX_PORT }}",
               "AUTH_SERVICE_HOST": "${{ secrets.AUTH_SERVICE_HOST }}",
               "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}",
-              "DOMAIN": "${{ secrets.DEV_DOMAIN }}"
+              "DOMAIN": "${{ secrets.DEV_DOMAIN }}",
+              "K8S_HOST": "${{ secrets.K8S_HOST }}",
+              "K8S_PORT": "${{ secrets.K8S_PORT }}",
             }
 
       - name: Deploy to Dev
@@ -112,7 +114,9 @@ jobs:
               "PROXMOX_PORT": "${{ secrets.PROXMOX_PORT }}",
               "AUTH_SERVICE_HOST": "${{ secrets.AUTH_SERVICE_HOST }}",
               "AUTH_SERVICE_PORT": "${{ secrets.AUTH_SERVICE_PORT }}",
-              "DOMAIN": "${{ secrets.PROD_DOMAIN }}"
+              "DOMAIN": "${{ secrets.PROD_DOMAIN }}",
+              "K8S_HOST": "${{ secrets.K8S_HOST }}",
+              "K8S_PORT": "${{ secrets.K8S_PORT }}",
             }
 
       - name: Deploy to Prod
