--- a/services/jupyter.conf.template
+++ b/services/jupyter.conf.template
@@ -12,13 +12,14 @@ server {
         include /etc/nginx/snippets/auth-common.conf;
 
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Upgrade "websocket";
         proxy_set_header Connection "upgrade"; 
         proxy_pass http://jupyter;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         
         proxy_buffering off;
         client_max_body_size 0;
